lib/bait/tests/inout_error/struct/required_field.in.bt
type Number := i8 | i16 | i32 | i64

struct Spam{
	x i32
	@required eggs bool
	y i32
	n Number
}

s := Spam{
	eggs = true
}

s2 := Spam{
	n = 5
}
